fixed the wrapping issue for the layout

--- a/src/Styles - SASS/Watchlist.scss
+++ b/src/Styles - SASS/Watchlist.scss
@@ -8,7 +8,6 @@
   flex-direction: column;
   .watchlist-section {
     display: flex;
-    flex-wrap: wrap;
     flex-direction: column;
     background-color: darken($color: variables.$main-grey, $amount: 7%);
     padding: 1% 5%;
